[148] [lens-searchbox] Fix lens searchbox flickering
Original change's description:
> [lens-searchbox] Fix lens searchbox flickering
> 
> Ensures the input background does not flicker when a user interacts with
> the search input box.
> 
> Updates:
> * dropdown coloring
> * focused-on coloring
>   * focused-on coloring for dark mode
> * not focused-on coloring
> * naming to be more clear
> 
> Demo: https://screencast.googleplex.com/cast/NjU5MDkwMjI1MTI5MDYyNHw2MjU3YmQ2OC05Yg
> Bug: b:500449536
> Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/7750006
> Commit-Queue: James Leung <jamesleung@google.com>
> Cr-Commit-Position: refs/heads/main@{#1614865}

Bug: 505094926
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/7783576
Commit-Queue: Justin Donnelly <jdonnelly@chromium.org>
Bot-Commit: rubber-stamper@appspot.gserviceaccount.com <rubber-stamper@appspot.gserviceaccount.com>
Cr-Commit-Position: refs/branch-heads/7778@{#1368}
Cr-Branched-From: 77f495ee216d4c3cc784d33658bad4778c0680ee-refs/heads/main@{#1610480}

--- a/chrome/browser/resources/lens/shared/searchbox/lens_searchbox.css
+++ b/chrome/browser/resources/lens/shared/searchbox/lens_searchbox.css
@@ -10,6 +10,9 @@
  * #css_wrapper_metadata_end */
 
 :host {
+  --color-cr-searchbox-input-focused: var(--color-lens-searchbox-background);
+  --color-cr-searchbox-input-not-focused: var(--color-searchbox-background);
+  --color-cr-searchbox-input-textarea: var(--color-unfocused-searchbox-input);
   --cr-searchbox-border-radius: calc(0.5 * var(--cr-searchbox-height));
   --cr-searchbox-icon-width: 26px;
   --cr-searchbox-icon-spacing: 11px;
@@ -42,8 +45,7 @@
 }
 
 #inputWrapper {
-  background-color: var(--color-lens-searchbox-background,
-      var(--color-searchbox-background));
+  background-color: var(--color-cr-searchbox-input-not-focused);
   border-radius: var(--cr-searchbox-border-radius);
   box-shadow: var(--cr-searchbox-shadow);
   display: flex;
@@ -72,9 +74,12 @@ cr-searchbox-input::part(searchbox-input):focus::placeholder {
           --color-searchbox-results-background);
 }
 
-:host(:not([dropdown-is-visible]))
-    cr-searchbox-input::part(searchbox-input):focus {
-  background-color: var(--color-searchbox-background);
+cr-searchbox-input::part(searchbox-input):focus {
+  --color-cr-searchbox-input-textarea: var(--color-cr-searchbox-input-focused);
+}
+
+#inputWrapper:focus-within {
+  background-color: var(--color-cr-searchbox-input-focused);
 }
 
 cr-searchbox-input::part(searchbox-input) {
